--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
 	<title>This is amazing cool website</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="bootstrap.min.css">
+	<!-- Include our css and javascript file -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<script type="text/javascript" src="js/main.js"></script>
+	
+	 <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138544822-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-138544822-1');
+</script>
 
 </head>
 <body>
 
-<div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-</div>
+<h1>Hello world</h1>
 
 <br>
 
-<button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
-
-<br>
-<div class="alert alert-primary" role="alert">
-  A simple primary alert—check it out!
-</div>
+<button type="button" class="btn btn-primary btn-lg btn-block">Press me</button>
 
 
 
